Ready to Launch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First$1online - Kickstart Your Digital Journey</title>
-    <meta name="description" content="Unlock your first $1 online with a proven guide, video walkthrough, and vibrant community. Join First$1online today!">
+    <meta name="description" content="Unlock your first $1 online with the 'First Dollar Blueprint' guide. Join the First$1online community today!">
     <meta name="keywords" content="make money online, first dollar, entrepreneurship, digital guide, first$1online, build in public">
     <meta name="author" content="First$1online">
     
@@ -300,38 +300,6 @@
             color: #34d399;
         }
 
-        /* Testimonials */
-        .testimonials {
-            padding: 5rem 5%;
-            background: var(--bg);
-        }
-
-        .testimonial-card {
-            background: var(--white);
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: var(--shadow);
-            text-align: center;
-            transition: transform 0.3s;
-        }
-
-        .testimonial-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .stars {
-            color: #fbbf24;
-            margin-bottom: 1rem;
-            font-size: 1.2rem;
-        }
-
-        .user-name {
-            font-weight: 600;
-            color: var(--text);
-            margin-top: 1.5rem;
-            display: block;
-        }
-
         /* Footer */
         footer {
             background: var(--white);
@@ -389,26 +357,14 @@
     <section id="what-you-get" class="preview-section">
         <div class="section-title">
             <h2>What You Get for Just $1</h2>
-            <p>Unlock a treasure trove of resources to launch your online earning journey today.</p>
+            <p>Unlock a single, powerful resource to launch your online earning journey today.</p>
         </div>
         
         <div class="grid-container">
             <div class="feature-card">
                 <div class="icon-box"><i class="fas fa-file-pdf"></i></div>
                 <h3>"First Dollar Blueprint" PDF</h3>
-                <p>A 20-page guide packed with actionable steps to set up your first online income stream.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="icon-box"><i class="fas fa-video"></i></div>
-                <h3>15-Min Video Walkthrough</h3>
-                <p>Watch me build it live—click-by-click guidance to avoid pitfalls and start fast.</p>
-            </div>
-
-            <div class="feature-card">
-                <div class="icon-box"><i class="fas fa-users"></i></div>
-                <h3>Exclusive Community Access</h3>
-                <p>Join our X and Discord groups for support, tips, and real-time motivation.</p>
+                <p>This exclusive 20-page guide is your roadmap to earning your first dollar online. Packed with practical, no-fluff steps, it walks you through setting up a simple income stream—perfect for beginners or indie builders. From identifying opportunities to executing your first sale, it’s designed to get you results fast, all while building confidence in your digital skills.</p>
             </div>
         </div>
     </section>
@@ -420,29 +376,6 @@
         <a href="https://discord.gg/9YREqmph" target="_blank" class="community-link" style="margin-left: 1rem;">Join Discord</a>
     </section>
 
-    <section class="testimonials">
-        <div class="section-title">
-            <h2>What Our Pioneers Say</h2>
-        </div>
-        <div class="grid-container">
-            <div class="testimonial-card">
-                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                <p>"The PDF cut through the noise—I made my first $1 in 3 days. Amazing value!"</p>
-                <span class="user-name">- Alex M.</span>
-            </div>
-            <div class="testimonial-card">
-                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                <p>"The community on X and Discord kept me going. Worth every penny!"</p>
-                <span class="user-name">- Christina D.</span>
-            </div>
-            <div class="testimonial-card">
-                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-                <p>"Straightforward and effective. It’s work, but the guide makes it doable."</p>
-                <span class="user-name">- Radu I.</span>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div>
             <h3>First$1online</h3>
@@ -451,7 +384,6 @@
         <div class="footer-links">
             <a href="#">Terms</a>
             <a href="#">Privacy</a>
-            <a href="https://www.notion.so/The-First-Dollar-Blueprint-Your-Step-by-Step-Guide-to-Earning-Online-as-a-Beginner-Indie-Builder-2d82bc12a14080b0b91ec17f5de18487">Blueprint</a>
         </div>
         <p>&copy; 2025 First$1online. All rights reserved.</p>
     </footer>
