Ready to Launch

--- a/index.html
+++ b/index.html
@@ -365,21 +365,7 @@
                 <div class="icon-box"><i class="fas fa-file-pdf"></i></div>
                 <h3>"First Dollar Blueprint" Notion Page</h3>
                 <p>🚀 Unlock Your First Online Dollar: What's Inside "The First Dollar Blueprint" Notion Page
-If you're a beginner indie builder ready to turn ideas into income without hype or high costs, this Notion page delivers a no-fluff, actionable guide to earning your first $1 (and scaling from there). Here's exactly what you'll get:
-
-The Momentum Flywheel Framework: A proven 7-step cycle to spot pain points, build micro-products, share on X, monetize early, gather feedback, reinvest, and compound growth. Learn how tiny tools lead to unstoppable momentum, with real examples like Damon Chen's journey to $1M.
-Ultimate Zero-Cost Builder's Toolkit (2025 Edition): A curated stack of free/freemium tools for design (e.g., Flaticon, unDraw), no-code building (e.g., Carrd, Bubble), code options (e.g., Vercel, Tailwind), payments (e.g., Stripe, Gumroad), and more. Tailored paths for beginners and advanced users to launch MVPs without spending a penny.
-Hall of Masters: Handpicked X (Twitter) accounts to follow for daily inspiration, including indie pioneers like @levelsio and @dvassallo, plus rising stars like @dannypostma. Transform your feed into a free mentorship network.
-In-Depth Flowchart Breakdown: A 9-part analysis of the flywheel diagram, covering core insights, daily shipping habits, audience growth loops, inbound demand, monetization strategies, revenue reinvestment (e.g., buying time or micro-assets), and premium pricing. Understand the dynamics with color-coded explanations and practical applications.
-Complete 0-to-First-Dollar Launch Roadmap: A phased checklist to go from idea to sale in weeks:
-Phase 1: Idea Validation (1-3 days): Brainstorm, check communities, poll on X.
-Phase 2: Build Your MVP (3-14 days): Scope tiny, add payments, test.
-Phase 3: Marketing & Launch (Ongoing): Build in public, content strategies, launch tactics, early loops.
-Phase 4: Earn Your First $1 (Week 2-4): Pricing tips, promotion, celebration.
-
-Final Motivation & Pro Tips: Empowering advice to overcome barriers, focus on consistency, and ship without permission. Includes resources like YouTube tutorials and community forums.
-
-This page equips you with everything to start today—motivation, tools, steps, and mindset—for just $1. It's designed for quick wins, helping you validate ideas, build fast, and monetize while growing an audience on X. Perfect for non-coders or stalled creators; many hit $1K+/month by following similar paths. Grab it and ship your first product! 🚀</p>
+If you're a beginner indie builder ready to turn ideas into income without hype or high costs, this Notion page delivers a no-fluff, actionable guide to earning your first $1 (and scaling from there).</p>
             </div>
         </div>
     </section>
