Changed communities URL
Updated navigation links and community section links in index.html.

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <div class="nav-links">
             <a href="#what-you-get">What You Get</a>
             <a href="#community">Community</a>
-            <a href="https://x.com/i/communities/2005700300741496877" target="_blank" class="cta-button-nav">
+            <a href="https://x.com/i/communities/2005962957914554628" target="_blank" class="cta-button-nav">
                 <i class="fab fa-x-twitter"></i> Join Now
             </a>
         </div>
@@ -373,8 +373,8 @@ If you're a beginner indie builder ready to turn ideas into income without hype 
     <section id="community" class="community-bar">
         <h2><i class="fab fa-x-twitter"></i> Build in Public</h2>
         <p>Track our progress and connect with others starting from scratch. Real revenue, real conversations.</p>
-        <a href="https://x.com/i/communities/2005700300741496877" target="_blank" class="community-link">Join X Community</a>
-        <a href="https://discord.gg/9YREqmph" target="_blank" class="community-link" style="margin-left: 1rem;">Join Discord</a>
+        <a href="https://x.com/i/communities/2005962957914554628" target="_blank" class="community-link">Join X Community</a>
+        <a href="https://discord.gg/QHgnvyYW" target="_blank" class="community-link" style="margin-left: 1rem;">Join Discord</a>
     </section>
 
     <footer>
@@ -398,4 +398,5 @@ If you're a beginner indie builder ready to turn ideas into income without hype 
     </script>
 </body>
 </html>
+
 
