--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         </div>
         <div class="preview-gallery">
             <!-- REPLACE THESE WITH YOUR REAL SCREENSHOTS -->
-            <img src="https://via.placeholder.com/800x1000/ffffff/000000?text=Blueprint+Table+of+Contents+or+First+Section+(blurred)" alt="Blueprint preview 1">
-            <img src="https://via.placeholder.com/800x1000/ffffff/000000?text=Sample+Steps+or+Resource+List+(blurred)" alt="Blueprint preview 2">
-            <img src="https://via.placeholder.com/800x1000/ffffff/000000?text=One+Concrete+Tip+or+Checklist+(blurred)" alt="Blueprint preview 3">
+            <img src="images/img1.png" alt="Firts One Dollar Blueptint">
+            <img src="images/img2.png" alt="Funnel-To-Flywheel">
+            <img src="images/img3.png" alt="Flywheel">
         </div>
         <div style="text-align:center; margin-top:2.5rem;">
             <a href="https://buy.stripe.com/cNi00jcgkcLx4A092k8N201" class="main-cta">Unlock Full Version for $1</a>
@@ -202,3 +202,4 @@
     </script>
 </body>
 </html>
+
